WIP - CRM Frameworks

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="arup_Bootstrap_TableJS"></script>
     <script type="text/javascript" src="arup_Bootstrap_MultiselectJS"></script>
     <script type="text/javascript" src="arup_OppoWiz.js"></script>
-    <script type="text/javascript" src="arup_OppoWizValidate.js"></script>
+    <!--<script type="text/javascript" src="arup_OppoWizValidate.js"></script>-->
     <script type="text/javascript" src="mag_/js/alert.js"></script>
     <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="arup_SDK.WebAPI_min.js" type="text/javascript"></script>
@@ -39,7 +39,8 @@
 
             // Set default values for all fields.
             Arup_setAllDefault();
-            Arup_AddFocusOutValidationAll()
+            Arup_AddFocusOutValidationAll();
+            arup_AddOnChangeAll();
 
             $("#mysub").wizard({
                 exitText: 'exit',
@@ -53,7 +54,7 @@
                                     Xrm.Utility.closeProgressIndicator();
                                     Xrm.Navigation.openAlertDialog({
                                         text: "Opportunity " + result.name + " has been created",
-                                        title: "Opportunity " + result.newEntityid + " Created"
+                                        title: "Opportunity Created"
                                     });
                                 },
                                 function (errorDetail) {
@@ -169,7 +170,6 @@
                     <form class="" id="main" on>
                         <div class="form-group">
                             <label for="opportunityType">Opportunity Type:</label>
-                            <!--<select id="opportunityType" class="form-control" onchange="onOpportunityTypeChange(this)" onfocusout="checkSelected(this)" title="Select Opportunity Type" autofocus>-->
                             <select id="opportunityType" class="form-control" onchange="onOpportunityTypeChange(this)" placeholder="Select Opportunity Type" autofocus>
                                 <option value="" selected>Select Opportunity Type</option>
                                 <option value="770000000" title="New Opportunity">New Opportunity</option>
@@ -184,14 +184,14 @@
                         <div class="form-group">
                             <label for="relatedopportunity">Related Parent Opportunity:</label>
                             <!--<input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" oninput="getOpportunities(this);" title="Input related parent opportunity" autocomplete="off" onfocusout="ensureRelatedOpportunitySelected(this)" />-->
-                            <input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" oninput="getOpportunities(this);" placeholder="Input related parent opportunity" autocomplete="off"  />
-                                <datalist id="opportunities">
+                            <input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" oninput="getOpportunities(this);" placeholder="Input related parent opportunity" autocomplete="off" />
+                            <datalist id="opportunities">
                             </datalist>
                         </div>
                         <div class="form-group">
                             <label for="leadSource">Lead Source:</label>
                             <!----<span class="glyphicon glyphicon-lock"></span>-->
-                            <select id="leadSource" class="form-control" title="Enter Source of Opportunity"  oninput="validateField(this)" onchange="validateField(this)">
+                            <select id="leadSource" class="form-control" title="Enter Source of Opportunity" oninput="validateField(this)" onchange="validateField(this)">
                                 <option value="" selected>Select Lead Source</option>
                                 <option value="100000000" title="Arup bid to supply same/further services, as an extension to an existing project. (One Arup team delivering to the client).">Addition to existing services</option>
                                 <option value="100000002" title="Arup has identified an opportunity, suggested the project idea, then submitted a bid to a client.">Arup project (idea) creation</option>
@@ -202,6 +202,14 @@
                                 <option value="11" title="Arup bid follows long-term activities to build a relationship with the client, and demonstrate our capabilities, aiming to become the ‘first choice for project’.">Long-Term Opportunity</option>
                                 <option value="10" title="Arup chose to bid following a public open invitation.">Public Advertisement/OJEU</option>
                             </select>
+                        </div>
+                        <div class="form-group col-lg-6 collapsed" >
+                            <label for="crmframeworkexists">CRM Framework Record Exists:</label>
+                            <input type="checkbox" id="crmframeworkexists" name="hasframework" checked="" />
+                        </div>
+                        <div class="form-group col-lg-6 collapsed">
+                            <label for="contractagreementref">Contract Agreement Ref #:</label>
+                            <input id="contractagreementref" class="form-control input-form"  placeholder="Contract ref #" autocomplete="off" />
                         </div>
                         <br />
                         <br />
@@ -259,7 +267,8 @@
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="project_country">Project Country:</label>
-                            <input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this);" onfocusout="ensureSelected(this);getStates();"  title="Input project country" autocomplete="off" />
+                            <!--<input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this);" onfocusout="ensureSelected(this);getStates();"  title="Input project country" autocomplete="off" />-->
+                            <input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this);" title="Input project country" autocomplete="off" />
                             <datalist id="countries">
                             </datalist>
                         </div>
