--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -22,12 +22,9 @@
     <script type="text/javascript" src="arup_Bootstrap_TableJS"></script>
     <script type="text/javascript" src="arup_Bootstrap_MultiselectJS"></script>
     <script type="text/javascript" src="arup_OppoWiz.js"></script>
-    <!--<script type="text/javascript" src="arup_OppoWizValidate.js"></script>-->
     <script type="text/javascript" src="mag_/js/alert.js"></script>
     <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="arup_SDK.WebAPI_min.js" type="text/javascript"></script>
-
-    <script src="arup_OppoWizAutocomplete.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             //Initialize tooltips
@@ -40,7 +37,8 @@
             // Set default values for all fields.
             Arup_setAllDefault();
             Arup_AddFocusOutValidationAll();
-            arup_AddOnChangeAll();
+            // arup_AddOnChangeAll();
+            arup_AddAllEvents();
 
             $("#mysub").wizard({
                 exitText: 'exit',
@@ -66,22 +64,7 @@
                         function (errors) {
                             debugger;
                             ArupValidationErrorDialog(errors);
-                            //var errorEntities = [];
-                            //var errorList = "";
-                            //var conjunction = "";
-                            //for (e in errors) {
-                            //    if (errors.hasOwnProperty(e)) {
-                            //        errorEntities.push(e);
-                            //        errorList += conjunction + e + "\r\n   " + errors[e].join("\r\n   ");
-                            //        conjunction = "\r\n";
-
-                            //    }
-                            //}
-                            //Xrm.Navigation.openErrorDialog({
-                            //    message: "Errors in " + errorEntities.join(", "),
-                            //    details: errorList,
-                            //    title: "Validation errors"
-                            //});
+                         
                         }
                     );
                 }
@@ -94,17 +77,7 @@
                     e.preventDefault();
                 });
 
-            // Hook up on the fly validation of input fields.
-            //var form = document.querySelector("form#page4");
-            //Arup.validateOppWiz.addValidationHooks(form);
-
-            //  var validator = new ArupValidateOppoWiz(document, "form#page4");
-
-            //   var projectName = new ArupAutoCompleteField( "WC", "project_name", "Project Name 2",  "ccrm_name", validator,  {  presence: { message: "- a name is required" }  });
-
             $('.multiselect-item .caret-container').click();
-
-            // setupAutocomplete();
         });
 
     </script>
@@ -164,10 +137,10 @@
             </div>
             <div class="wizard-step" style="display: none;" id="SS_Step">
                 <div class="container" id="SS">
-                    <form class="" id="main" on>
+                    <form class="" id="main" >
                         <div class="form-group">
                             <label for="opportunityType">Opportunity Type:</label>
-                            <select id="opportunityType" class="form-control" onchange="onOpportunityTypeChange(this)" placeholder="Select Opportunity Type" autofocus>
+                            <select id="opportunityType" class="form-control" placeholder="Select Opportunity Type" autofocus>
                                 <option value="" selected>Select Opportunity Type</option>
                                 <option value="770000000" title="New Opportunity">New Opportunity</option>
                                 <option value="770000001" title="Project extension - existing contract">Project extension - existing contract</option>
@@ -180,15 +153,14 @@
                         </div>
                         <div class="form-group">
                             <label for="relatedopportunity">Related Parent Opportunity:</label>
-                            <!--<input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" oninput="getOpportunities(this);" title="Input related parent opportunity" autocomplete="off" onfocusout="ensureRelatedOpportunitySelected(this)" />-->
-                            <input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" oninput="getOpportunities(this);" placeholder="Input related parent opportunity" autocomplete="off" />
+                            <input list="opportunities" id="relatedopportunity" class="form-control" name="relatedopportunity" placeholder="Input related parent opportunity" autocomplete="off" />
                             <datalist id="opportunities">
                             </datalist>
                         </div>
                         <div class="form-group">
                             <label for="leadSource">Lead Source:</label>
                             <!----<span class="glyphicon glyphicon-lock"></span>-->
-                            <select id="leadSource" class="form-control" title="Enter Source of Opportunity" oninput="validateField(this)" onchange="validateField(this)">
+                            <select id="leadSource" class="form-control" title="Enter Source of Opportunity" >
                                 <option value="" selected>Select Lead Source</option>
                                 <option value="100000000" title="Arup bid to supply same/further services, as an extension to an existing project. (One Arup team delivering to the client).">Addition to existing services</option>
                                 <option value="100000002" title="Arup has identified an opportunity, suggested the project idea, then submitted a bid to a client.">Arup project (idea) creation</option>
@@ -211,7 +183,7 @@
                             </div>
                             <div class="form-group hidden">
                                 <label for="crmframeworkrecord">CRM Framework Record:</label>
-                                <input list="frameworkrecs" id="crmframeworkrecord" class="form-control" name="crmframeworkrecord" oninput="getFrameworkRecs(this);" placeholder="Select CRM Framework" autocomplete="off" />
+                                <input list="frameworkrecs" id="crmframeworkrecord" class="form-control" name="crmframeworkrecord" placeholder="Select CRM Framework" autocomplete="off" />
                                 <datalist id="frameworkrecs">
                                 </datalist>
                             </div>
@@ -250,13 +222,13 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="client">Client:</label>
-                        <input list="clients" id="client" class="form-control input-form" name="client" oninput="getClients(this, true);"  title="Input Client" autocomplete="off" placeholder="Client company name" />
+                        <input list="clients" id="client" class="form-control input-form" name="client" title="Input Client" autocomplete="off" placeholder="Client company name" />
                         <datalist id="clients">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="endclient">Ultimate/End Client:</label>
-                        <input list="endclients" id="endclient" class="form-control input-form" name="endclient"  oninput="getClients(this, false);" title="Input End Client" autocomplete="off" placeholder=" Ultimate client name" />
+                        <input list="endclients" id="endclient" class="form-control input-form" name="endclient"  title="Input End Client" autocomplete="off" placeholder=" Ultimate client name" />
                         <datalist id="endclients">
                         </datalist>
                     </div>
@@ -274,13 +246,13 @@
                         <div class="form-group col-lg-6">
                             <label for="project_country">Project Country:</label>
                             <!--<input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this);" onfocusout="ensureSelected(this);getStates();"  title="Input project country" autocomplete="off" />-->
-                            <input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this);" title="Input project country" autocomplete="off" />
+                            <input list="countries" id="project_country" class="form-control input-form" name="project_country" title="Input project country" autocomplete="off" />
                             <datalist id="countries">
                             </datalist>
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="project_state">Project State/Province:</label>
-                            <input list="states" id="project_state" class="form-control input-form" name="project_state" title="Input project state" autocomplete="off"  readonly />
+                            <input list="states" id="project_state" class="form-control input-form" name="project_state" title="Input project state" autocomplete="off" readonly />
                             <datalist id="states">
                             </datalist>
                         </div>
@@ -292,7 +264,7 @@
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="arup_business">Arup Business:</label>
-                            <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" onfocus="getBusinesses();"  onfocusout="ensureSelected(this);getSubBusinesses()" title="Input arup business" autocomplete="off" placeholder="Business Area" />
+                            <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" title="Input arup business" autocomplete="off" placeholder="Business Area" />
                             <datalist id="businesses">
                             </datalist>
                         </div>
@@ -304,21 +276,25 @@
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="arup_company">Arup Company:</label>
-                            <input list="companies" id="arup_company" class="form-control input-form" name="arup_company" onchange="getAccountingCentres();" title="Input Company" autocomplete="aoff" />
+                            <input list="companies" id="arup_company" class="form-control input-form" name="arup_company" title="Input Company" autocomplete="aoff" />
                             <datalist id="companies">
                             </datalist>
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="accountingcentre">Accounting Centre:</label>
-                            <input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre"  title="Input Accounting Centre" autocomplete="off" />
+                            <input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre" title="Input Accounting Centre" autocomplete="off" />
                             <datalist id="accountingcentres">
                             </datalist>
                         </div>
                         <div class="form-group col-lg-6">
                             <label for="opporigin">Opportunity Originator:</label>
-                            <input list="users" id="opporigin" class="form-control input-form" name="opporigin" oninput="getUsers(this);" title="Input Staff name" autocomplete="off" placeholder="Arup staff name" />
+                            <input list="users" id="opporigin" class="form-control input-form" name="opporigin" title="Input Staff name" autocomplete="off" placeholder="Arup staff name" />
                             <datalist id="users">
                             </datalist>
+                        </div>
+                        <div class="form-group col-lg-6 hidden">
+                            <label for="K12">Is it K-12 School:</label>
+                            <input type="checkbox" id="K12" name="isK12"  />
                         </div>
                         <br />
                         <div class="form-group col-lg-12">
